Gravação de tela concertado

--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -9,6 +9,7 @@
 @import "partials/sidebarDashboard";
 @import "partials/calendar";
 @import "partials/addTeste";
+@import "partials/videoGrid";
 @import "partials/addTesteFinalizado";
 @import "partials/convidarTesters";
 @import "partials/mediasqueries";
