Codigo de anotação no cliente em outro arquivo

--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -29,3 +29,4 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="/socket.io/socket.io.js" defer></script>
 <script src="/Javascript/chamadas.js" defer></script>
+<script src="/Javascript/mandarAnotacao.js" defer></script>
