--- a/Views/Layouts/loginLayout.hbs
+++ b/Views/Layouts/loginLayout.hbs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\CSS\theme.css">
+    <link rel="stylesheet" href="/CSS/theme.css">
+    <title>Ally</title>
 
 </head>
 
