--- a/Views/Layouts/main.hbs
+++ b/Views/Layouts/main.hbs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ally</title>
 
-    <link rel="stylesheet" href="/css/theme.css">
+    <link rel="stylesheet" href="/CSS/theme.css">
 </head>
 
 
