--- a/Views/calendario.hbs
+++ b/Views/calendario.hbs
@@ -11,6 +11,6 @@
         </div>
     </div>
 </div>
-<script src="/Javascript/calendario.js" defer></script>
-<script src='/Javascript/FullCallendar/main.min.js' defer></script>
-<script src='/Javascript/FullCallendar/pt-br.js' defer></script>
+<script src="./Javascript/calendario.js" defer></script>
+<script src='./Javascript/FullCallendar/main.min.js' defer></script>
+<script src='./Javascript/FullCallendar/pt-br.js' defer></script>
