--- a/Views/calendario.hbs
+++ b/Views/calendario.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./CSS/Fullcallendar/main.min.css">
+<link type="text/css" rel="stylesheet" href="./CSS/Fullcallendar/main.min.css">
 <div class="cotainerDashboard">
     {{> _sidebar}}
     <div class="contentDashboard">
