--- a/Public/CSS/sass/partials/_colors.scss
+++ b/Public/CSS/sass/partials/_colors.scss
@@ -1,7 +1,10 @@
 :root {
     --color-blue: #3B1AE3;
-    --color-pink: #F25270;
-    --color-yellow: #FFEE56;
-    --color-black: #02011D;
+    --color-pink: #FF5F7D;
+    --color-yellow: #FFF67A;
+    --color-black: #0A0016;
     --color-white: #FFF;
+    --color-hover: #2D13B2;
+
+    // --color-pink: #ff578a;
 }
