--- a/Public/CSS/sass/partials/_navbar.scss
+++ b/Public/CSS/sass/partials/_navbar.scss
@@ -3,10 +3,13 @@
   top: -3rem;
   background: var(--color-white);
   padding: 0.5rem;
+  
   color: #000;
 
   &:focus {
-    top: 1.2rem;
+    top: 1.1rem;
+    
+    
     left: 5rem;
     position: relative;
     margin: 12rem 0;
@@ -14,33 +17,63 @@
 }
 
 .logo img {
-  max-width: 90px;
+  max-width: 100px;
 }
-
 
 nav.main-nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 1.5rem;
+  padding-top: 1.5rem;
 
   ul#menu {
     display: flex;
-    margin-left: auto;
+    margin-right: auto;
+    margin-left: 5rem;
 
     li a {
-      margin-left: 3rem;
+      padding: 0 1rem;
       color: var(--color-black);
-      font-weight: 700;
+      font-weight: 500;
     }
 
-    li:nth-child(4) {
-      margin-left: 3rem;
+    li:after {
+      border-bottom: 3px solid var(--color-blue);
+      content: "";
+      display: block;
+      margin: 0.25em auto 0;
+      transition: width 150ms ease-in-out 0s;
+      width: 0;
+      
+    }
+    li:hover:after {
+      transition: width 50ms ease-in-out 0s;
+      width: 80%;
+  
     }
 
     .highlight {
-      padding-bottom: 0.2rem;
-      border-bottom: 4px solid var(--color-blue);
+      padding: 6px 8px;
+      border-radius: 5px;
+      background: #efecff;
+      margin-left: 1rem;
+      transition: 0.5s;
+
+      &:hover {
+        background: none;
+        transition: 0.2s;
+      }
     }
   }
+  
+  .menu-toggle {
+   display: none;
+  }
+
+  .menu-section {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
 }
+
