--- a/Views/Layouts/main.hbs
+++ b/Views/Layouts/main.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ally</title>
-    <link type="text/css" rel="stylesheet" href="/CSS/Fullcallendar/main.min.css">
+    <link type="text/css" rel="stylesheet" href="./CSS/Fullcallendar/main.min.css">
     <link rel="stylesheet" href="/CSS/theme.css">
 </head>
 
