--- a/Views/Layouts/main.hbs
+++ b/Views/Layouts/main.hbs
@@ -28,7 +28,7 @@
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
         new window.VLibras.Widget(' https://vlibras.gov.br/app'); </script>
-    <script src="/javascript/menu.js"></script>
+    <script src="/Javascript/menu.js"></script>
 </body>
 
 </html>
