--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -1,32 +1,47 @@
-<h1>Sala</h1>
-<div id="video-grid">
+<script src="https://kit.fontawesome.com/9d7bb7e31a.js" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+<div id="sala">
+    <p id="remote-video-text"></p>
+    <video id="remote-video" autoplay playsinline></video>
+    <div id="moveable">
+        <video id="local-video" autoplay muted playsinline></video>
+    </div>
 
+    <div class="multi-button">
+        <div class="buttonContainer">
+            <button class="hoverButton" onclick="{muteMicrophone()}">
+                <i id="mic-icon" class="fas fa-microphone fa-xs"></i>
+            </button>
+            <div class="HoverState" id="mic-text">Mute</div>
+        </div>
+
+        <div class="buttonContainer">
+            <button class="hoverButton" id="share-button" onclick="{swap()}">
+                <i id="swap-icon" class="fas fa-desktop fa-xs"></i>
+            </button>
+            <div class="HoverState" id="swap-text">Share Screen</div>
+        </div>
+
+        <div class="buttonContainer">
+            <button class="hoverButton" id="pip-button" onclick="{togglePictureInPicture()}">
+                <i class="fas fa-external-link-alt fa-xs"></i>
+            </button>
+            <div class="HoverState" id="pip-text">Toggle Picture in Picture</div>
+        </div>
+
+        <div class="buttonContainer" role="button">
+            <button class="hoverButton" onclick="{window.location.href = '/dashboard'}">
+                <i class="fas fa-phone-slash fa-xs"></i>
+            </button>
+            <div class="HoverState">End Call</div>
+        </div>
+    </div>
 </div>
-<button id="gravar" class=' btn blue'>Gravar tela</button>
-<button id="parar" class=' btn blue'>Parar de gravar tela</button>
-<button id="compartilharTela" class=' btn blue'>Compartilhar tela</button>
-<button id="pararDeCompartilhar" style="display: none;" class=' btn blue'>Parar de compartilhar tela</button>
-<div>
-    <div class="col s6">
-        <h3>Tarefas</h3>
-        <ul>
-            {{#each teste.tarefas as |tarefa|}}
-            <li>{{tarefa}}</li>
-            {{/each}}
-        </ul>
-    </div>
-    <div class="col s6">
-        <h3>Anotações</h3>
-        <textarea name="anotacao" id="anotacoes" placeholder="Escreve sua anotações"></textarea>
-        <button class='btnanotacao'>Salvar anotação</button>
-    </div>
-    <div class="gravacao">
-        <video id="gravacao" autoplay="true"></video>
-    </div>
-</div>
 
-
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
+<script src="https://cdn.rawgit.com/muaz-khan/DetectRTC/master/DetectRTC.js" defer></script>
 <script src="/socket.io/socket.io.js" defer></script>
 <script src="/Javascript/chamadas.js" defer></script>
-<script src="/Javascript/mandarAnotacao.js" defer></script>
+{{!-- <script src="/Javascript/mandarAnotacao.js" defer></script> --}}
