--- a/Views/calendario.hbs
+++ b/Views/calendario.hbs
@@ -1,3 +1,5 @@
+<link type="text/css" rel="stylesheet" href="./CSS/Fullcallendar/main.min.css">
+
 <div class="cotainerDashboard">
     {{> _sidebar}}
     <div class="contentDashboard">
